--- a/src/index.htm
+++ b/src/index.htm
@@ -18,10 +18,16 @@
 <body>
   <h1>Hello</h1>
   <div id="app">
-    <input v-model="name" placeholder="Name">
-    <button v-on:click="sayHello()" class="btn btn-primary">Say hello</button>
-    <div>{{ greeting }}</div>
+    <!--<input v-model="name" placeholder="Name">!-->
+    <button v-on:click="GetAllCD()" class="btn btn-primary">Get All CD</button>
+    <!--<div>{{ greeting }}</div>!-->
   </div>
+
+  <ul id="cdliste" v-if="cds.length">
+    <li v-for="cd in cds">
+      {{cd.title}} 
+    </li>
+  </ul>
 
   <script src="bundle.js"></script>
 </body>
