--- a/src/index.htm
+++ b/src/index.htm
@@ -18,7 +18,7 @@
 <body>
   <h1>Hello</h1>
   <div id="app">
-    <button v-on:click="GetAllCD" class="btn btn-primary">Get All CD</button>
+    <button id="GetAllButton" v-on:click="GetAllCD" class="btn btn-primary">Get All CD</button>
     <ul id="cdliste" v-if="cds.length">
       <li v-for="cd in cds">
         Title: {{cd.title}}, Artist: {{cd.artist}}, Duration of the cd: {{cd.duration}}, number of tracks: {{cd.numberOfTracks}}, year of publication: {{cd.yearOfPublication}}
